--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,7 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  
 }
 
 
@@ -140,7 +139,7 @@ body {
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 p-0 m-0;
   }
   body {
     @apply bg-background text-foreground;
